--- a/crates/sparkler/templates/base.html
+++ b/crates/sparkler/templates/base.html
@@ -57,6 +57,7 @@
     </head>
 
     <body>
+        <div id="top"></div>
         <nav>
             <div class="flex gap-1">
                 <a class="button active desktop" href="/">
