--- a/crates/sparkler/templates/profile_base.html
+++ b/crates/sparkler/templates/profile_base.html
@@ -178,6 +178,21 @@
                         </svg>
                         Block
                     </a>
+                    <a href="javascript:report()">
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 16 16"
+                            width="16"
+                            height="16"
+                            aria-label="Report symbol"
+                            class="icon"
+                        >
+                            <path
+                                d="M4.47.22A.749.749 0 0 1 5 0h6c.199 0 .389.079.53.22l4.25 4.25c.141.14.22.331.22.53v6a.749.749 0 0 1-.22.53l-4.25 4.25A.749.749 0 0 1 11 16H5a.749.749 0 0 1-.53-.22L.22 11.53A.749.749 0 0 1 0 11V5c0-.199.079-.389.22-.53Zm.84 1.28L1.5 5.31v5.38l3.81 3.81h5.38l3.81-3.81V5.31L10.69 1.5ZM8 4a.75.75 0 0 1 .75.75v3.5a.75.75 0 0 1-1.5 0v-3.5A.75.75 0 0 1 8 4Zm0 8a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z"
+                            ></path>
+                        </svg>
+                        Report
+                    </a>
                     <b class="title">Your account</b>
                     <a href="/settings/privacy#sparkler:block_list">
                         <svg
@@ -265,6 +280,36 @@
         </section>
     </div>
 </article>
+
+<dialog id="report_dialog">
+    <form class="inner" onsubmit="file_report(event)">
+        <div class="flex flex-col gap-1">
+            <label for="content">Reason</label>
+            <textarea
+                name="content"
+                id="content"
+                required
+                minlength="5"
+            ></textarea>
+
+            <p class="fade">
+                Please describe your reason for reporting this profile above.
+            </p>
+        </div>
+
+        <hr />
+        <div class="flex gap-2">
+            <button class="primary bold">Report</button>
+            <button
+                class="bold"
+                type="button"
+                onclick="document.getElementById('report_dialog').close()"
+            >
+                Cancel
+            </button>
+        </div>
+    </form>
+</dialog>
 
 <!-- prettier-ignore -->
 <div id="stylesheets">
@@ -395,6 +440,33 @@
                     button.classList.add("primary");
                     button.innerText = "Follow";
                 }
+            });
+    }
+
+    function report() {
+        document.getElementById("report_dialog").showModal();
+    }
+
+    function file_report(e) {
+        e.preventDefault();
+        fetch("/api/v1/profiles/{{ other.username }}/report", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+                content: e.target.content.value,
+            }),
+        })
+            .then((res) => res.json())
+            .then((res) => {
+                trigger("app:shout", [
+                    res.success ? "tip" : "caution",
+                    res.message || "Profile reported!",
+                ]);
+
+                e.target.reset();
+                document.getElementById("report_dialog").close();
             });
     }
 </script>
