--- a/crates/sparkler/templates/components/response.html
+++ b/crates/sparkler/templates/components/response.html
@@ -117,8 +117,8 @@
         </span>
 
         <div class="flex justify-between items-center gap-1 response_title">
-            <div class="footernav">
-                <b class="flex items-center gap-2 item">
+            <div class="footernav flex-wrap">
+                <b class="flex items-center gap-2">
                     <img
                         title="{{ response.author }}'s avatar"
                         src="/api/v1/profiles/{{ response.author }}/avatar"
@@ -141,7 +141,7 @@
                 <a
                     href="/response/{{ response.id }}"
                     title="{{ comment_count }} comments"
-                    class="button"
+                    class="button desktop"
                 >
                     <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -180,8 +180,33 @@
                         </svg>
                     </button>
 
-                    <div class="inner shadow-md" exclude="dropdown">
-                        {% if let Some(profile) = profile %} {% if
+                    <div class="inner shadow-md w-content" exclude="dropdown">
+                        {% if show_comments != false %}
+                        <a
+                            href="/response/{{ response.id }}"
+                            title="{{ comment_count }} comments"
+                            class="mobile flex"
+                        >
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 16 16"
+                                width="16"
+                                height="16"
+                                aria-label="Discussion symbol"
+                                class="icon"
+                            >
+                                <path
+                                    d="M1.75 1h8.5c.966 0 1.75.784 1.75 1.75v5.5A1.75 1.75 0 0 1 10.25 10H7.061l-2.574 2.573A1.458 1.458 0 0 1 2 11.543V10h-.25A1.75 1.75 0 0 1 0 8.25v-5.5C0 1.784.784 1 1.75 1ZM1.5 2.75v5.5c0 .138.112.25.25.25h1a.75.75 0 0 1 .75.75v2.19l2.72-2.72a.749.749 0 0 1 .53-.22h3.5a.25.25 0 0 0 .25-.25v-5.5a.25.25 0 0 0-.25-.25h-8.5a.25.25 0 0 0-.25.25Zm13 2a.25.25 0 0 0-.25-.25h-.5a.75.75 0 0 1 0-1.5h.5c.966 0 1.75.784 1.75 1.75v5.5A1.75 1.75 0 0 1 14.25 12H14v1.543a1.458 1.458 0 0 1-2.487 1.03L9.22 12.28a.749.749 0 0 1 .326-1.275.749.749 0 0 1 .734.215l2.22 2.22v-2.19a.75.75 0 0 1 .75-.75h1a.25.25 0 0 0 .25-.25Z"
+                                ></path>
+                            </svg>
+
+                            Comments
+
+                            <span class="notification">
+                                {{ comment_count }}
+                            </span>
+                        </a>
+                        {% endif %} {% if let Some(profile) = profile %} {% if
                         profile.username == response.author %}
                         <!-- actions for the profile owner only -->
                         <b class="title">Manage</b>
@@ -205,7 +230,10 @@
                             Pin
                         </a>
                         {% else %}
-                        <a href="#" onclick="pin_response('')">
+                        <a
+                            href="#"
+                            onclick="unpin_response('{{ response.id }}')"
+                        >
                             <svg
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewBox="0 0 16 16"
