--- a/crates/sparkler/templates/notifications.html
+++ b/crates/sparkler/templates/notifications.html
@@ -2,7 +2,7 @@
 endblock %} {% block head %}
 <meta name="description" content="{{ config.description }}" />
 {% endblock %} {% block nav_left %}
-<a class="button active" href="/">
+<a class="button" href="/">
     <svg
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 24 24"
@@ -63,6 +63,25 @@ endblock %} {% block head %}
 
     <main class="flex flex-col gap-2">
         <!-- notifications -->
+        <div class="flex justify-between">
+            <div></div>
+            <button onclick="trigger('notifications:clear', [])" class="bold">
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 16 16"
+                    width="16"
+                    height="16"
+                    aria-label="Open mail symbol"
+                    class="icon"
+                >
+                    <path
+                        d="M7.115.65a1.752 1.752 0 0 1 1.77 0l6.25 3.663c.536.314.865.889.865 1.51v6.427A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25V5.823c0-.621.33-1.196.865-1.51Zm1.011 1.293a.252.252 0 0 0-.252 0l-5.72 3.353L6.468 7.76a2.748 2.748 0 0 1 3.066 0l4.312-2.464-5.719-3.353ZM13.15 12.5 8.772 9.06a1.25 1.25 0 0 0-1.544 0L2.85 12.5Zm1.35-5.85-3.687 2.106 3.687 2.897ZM5.187 8.756 1.5 6.65v5.003Z"
+                    ></path>
+                </svg>
+                Mark all as read
+            </button>
+        </div>
+
         <!-- prettier-ignore -->
         {% for notif in notifs %}
             {% include "components/notification.html" %}
