--- a/crates/sparkler/templates/reports.html
+++ b/crates/sparkler/templates/reports.html
@@ -2,7 +2,7 @@
 endblock %} {% block head %}
 <meta name="description" content="{{ config.description }}" />
 {% endblock %} {% block nav_left %}
-<a class="button active" href="/">
+<a class="button" href="/">
     <svg
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 24 24"
